<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/black">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:src="@drawable/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:adjustViewBounds="true"
            app:layout_constraintTop_toBottomOf="@+id/progressBar" />

        <EditText
            android:id="@+id/fieldEmail"
            android:layout_marginStart="20dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ellipsize="end"
            android:hint="@string/hint_email"
            android:gravity="center"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:paddingTop="60dp"
            app:layout_constraintEnd_toStartOf="@+id/spacerView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/icon"
            app:layout_constraintHorizontal_bias="0.5"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            />

        <View
            android:id="@+id/spacerView"
            android:layout_width="20dp"
            android:layout_height="0dp"
            app:layout_constraintEnd_toStartOf="@+id/fieldPassword"
            app:layout_constraintStart_toEndOf="@+id/fieldEmail"
            app:layout_constraintTop_toTopOf="@+id/fieldEmail"
            />

        <EditText
            android:id="@+id/fieldPassword"
            android:layout_marginEnd="20dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:hint="@string/hint_password"
            android:gravity="center"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingTop="60dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/spacerView"
            app:layout_constraintTop_toTopOf="@+id/fieldEmail"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            />


    <Button
        android:id="@+id/buttonSignIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:layout_marginStart="20dp"
        android:text="@string/sign_in"
        app:layout_constraintEnd_toStartOf="@+id/transparentView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fieldEmail"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintHorizontal_bias="0.5"
        />


    <View
        android:id="@+id/transparentView"
        android:layout_width="20dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toStartOf="@+id/buttonSignUp"
        app:layout_constraintStart_toEndOf="@+id/buttonSignIn"
        app:layout_constraintTop_toTopOf="@+id/buttonSignIn"
    />

    <Button
        android:id="@+id/buttonSignUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:text="@string/sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/transparentView"
        app:layout_constraintTop_toTopOf="@+id/buttonSignIn"
        />

</androidx.constraintlayout.widget.ConstraintLayout>